--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0">Se navegador não é compatível com isso.</iframe>
         </section>
-        
+
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
         </section>
     </main>
