--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpeg" alt="GitHub">
+    <img src="imagens/tela-github.png" alt="GitHub">
     <a href="https://github.com/mariantonyaf" target="_blank">ACESSE</a>
 </body>
 </html>
